Update map search screen with location permissions and UI enhancements

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-native": "0.76.6",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
