--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "expo-location": "~18.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
